# ANE_VOXCPM_Homeassistant

./: .gitignore  README.md  pyproject.toml  run_vox.py  vox_bridge.py
speakers/: im_vipin.npy  im_vipin.txt
