[project]
name = "voxcpmane-wyoming"
version = "0.1.0"
description = "Wyoming protocol bridge for VoxCPMANE on Apple Silicon"
dependencies = [
    "voxcpmane",
    "wyoming>=1.5.0",
    "aiohttp>=3.9.0",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
